--- a/roles/schedServerManagement/tasks/main.yml
+++ b/roles/schedServerManagement/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
-# tasks file for schedServerStatusDeployment
+# tasks file for schedServerManagement
+
 - name: Stop schedServerStatus
   notify:
     - Stop schedServerStatus
@@ -14,3 +15,4 @@
   notify:
     - Restart schedServerStatus
   tags: reStartService
+    
